// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAssetDialog from computer snapshots the component 1`] = `
.c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c4 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c1 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: rgb(220,220,228,0.8);
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c3 {
  width: 51.875rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c9 svg {
  height: 12px;
  width: 12px;
}

.c9 svg > g,
.c9 svg path {
  fill: #ffffff;
}

.c9[aria-disabled='true'] {
  pointer-events: none;
}

.c9:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c9:focus-visible {
  outline: none;
}

.c9:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c10 svg > g,
.c10 svg path {
  fill: #8e8ea9;
}

.c10:hover svg > g,
.c10:hover svg path {
  fill: #666687;
}

.c10:active svg > g,
.c10:active svg path {
  fill: #a5a5ba;
}

.c10[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c10[aria-disabled='true'] svg path {
  fill: #666687;
}

.c5 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c38 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c40 > * + * {
  margin-left: 8px;
}

.c30 {
  font-weight: 500;
  font-size: 1rem;
  line-height: 1.25;
  color: #666687;
}

.c7 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #32324d;
}

.c8 {
  font-weight: 600;
  line-height: 1.14;
}

.c20 {
  background: #eaeaef;
}

.c21 {
  height: 1px;
  border: none;
  margin: 0;
}

.c11 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c22 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c23 {
  background: #f6f6f9;
  padding-top: 64px;
  padding-bottom: 64px;
  border-radius: 4px;
  border-color: #c0c0cf;
  border: 1px solid #c0c0cf;
  position: relative;
}

.c29 {
  padding-top: 12px;
  padding-bottom: 20px;
}

.c31 {
  position: absolute;
  left: 0px;
  right: 0px;
  top: 0px;
  bottom: 0px;
  z-index: 1;
  width: 100%;
}

.c33 {
  position: relative;
}

.c15 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c19 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c16 {
  font-weight: 600;
  line-height: 1.14;
}

.c17 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c13 {
  padding: 16px;
}

.c14 {
  border-bottom: 2px solid #4945ff;
}

.c18 {
  border-bottom: 2px solid transparent;
}

.c12[aria-disabled='true'] {
  cursor: not-allowed;
}

.c37 {
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1.33;
  color: #32324d;
}

.c34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c34 svg {
  height: 12px;
  width: 12px;
}

.c34 svg > g,
.c34 svg path {
  fill: #ffffff;
}

.c34[aria-disabled='true'] {
  pointer-events: none;
}

.c34:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c34:focus-visible {
  outline: none;
}

.c34:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c35 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c35 .sc-jnHPDa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 .c36 {
  color: #ffffff;
}

.c35[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true'] .c36 {
  color: #666687;
}

.c35[aria-disabled='true'] svg > g,
.c35[aria-disabled='true'] svg path {
  fill: #666687;
}

.c35[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c35[aria-disabled='true']:active .c36 {
  color: #666687;
}

.c35[aria-disabled='true']:active svg > g,
.c35[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c35:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c35:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c41 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c41 .sc-jnHPDa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c41 .c36 {
  color: #ffffff;
}

.c41[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c41[aria-disabled='true'] .c36 {
  color: #666687;
}

.c41[aria-disabled='true'] svg > g,
.c41[aria-disabled='true'] svg path {
  fill: #666687;
}

.c41[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c41[aria-disabled='true']:active .c36 {
  color: #666687;
}

.c41[aria-disabled='true']:active svg > g,
.c41[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c41:hover {
  background-color: #f6f6f9;
}

.c41:active {
  background-color: #eaeaef;
}

.c41 .c36 {
  color: #32324d;
}

.c41 svg > g,
.c41 svg path {
  fill: #32324d;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c27 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c28 {
  font-size: 3.75rem;
}

.c28 svg path {
  fill: #4945ff;
}

.c24 {
  border-style: dashed;
}

.c32 {
  opacity: 0;
  cursor: pointer;
}

<body
  class="lock-body-scroll"
>
  <div
    class="c0"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
  <div
    data-react-portal="true"
  >
    <div
      class="c1"
    >
      <div>
        <div
          aria-labelledby="title"
          aria-modal="true"
          class="c2 c3"
          role="dialog"
        >
          <div
            class="c4 c5"
          >
            <div
              class="c6"
            >
              <h2
                class="c7 c8"
                id="title"
              >
                Upload assets
              </h2>
              <button
                aria-disabled="false"
                aria-label="Close the modal"
                class="c9 c10"
                type="button"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                    fill="#212134"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div>
            <div
              class="c11"
            >
              <div
                aria-label="How do you want to upload your assets?"
                role="tablist"
              >
                <button
                  aria-controls="tabgroup-1-0-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c12"
                  id="tabgroup-1-0-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c13 c14"
                  >
                    <span
                      class="c15 c16 c17"
                    >
                      From computer
                    </span>
                  </div>
                </button>
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c12"
                  id="tabgroup-1-1-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c13 c18"
                  >
                    <span
                      class="c19 c16 c17"
                    >
                      From url
                    </span>
                  </div>
                </button>
              </div>
              <hr
                class="c20 c21"
              />
            </div>
            <div>
              <div
                aria-labelledby="tabgroup-1-0-tab"
                id="tabgroup-1-0-tabpanel"
                role="tabpanel"
                tabindex="0"
              >
                <form>
                  <div
                    class="c22"
                  >
                    <label>
                      <div
                        class="c23 c24"
                      >
                        <div
                          class="c25"
                        >
                          <div
                            class="c26 c27"
                          >
                            <div
                              class="c28"
                            >
                              <svg
                                aria-hidden="true"
                                fill="none"
                                height="1em"
                                viewBox="0 0 24 20"
                                width="1em"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21.525 2.394H7.814v1.582h13.711c.47 0 .824.498.824 1.091v9.834l-2.785-3.165c-.2-.233-.453-.42-.738-.549a2.21 2.21 0 00-.91-.194 2.209 2.209 0 00-.91.19 2.126 2.126 0 00-.739.545l-2.925 3.378-2.967-3.354a2.143 2.143 0 00-.739-.543 2.226 2.226 0 00-.909-.193c-.315.002-.626.07-.911.2-.285.13-.536.318-.737.552l-2.925 3.425V7.637H2.505v9.874c.023.153.059.304.107.451v.127l.042.095c.056.142.125.28.206.411l.099.15c.074.106.157.207.247.301l.123.119c.13.118.274.221.429.308h.025c.358.214.772.327 1.195.325h16.481a2.47 2.47 0 001.037-.239c.322-.153.605-.375.826-.648.222-.263.392-.564.502-.886.067-.216.108-.439.124-.664V5.067a2.493 2.493 0 00-.65-1.805 2.7 2.7 0 00-1.773-.868z"
                                  fill="#32324D"
                                />
                                <path
                                  d="M12.526 9.18c.91 0 1.648-.708 1.648-1.582 0-.874-.738-1.582-1.648-1.582-.91 0-1.648.708-1.648 1.582 0 .874.738 1.582 1.648 1.582zM3.297 6.395h.823V3.988h2.473v-.79-.792H4.12V0h-.823c-.219 0-.849.002-.825 0v2.406H0v1.582h2.472v2.407h.825z"
                                  fill="#32324D"
                                />
                              </svg>
                            </div>
                            <div
                              class="c29"
                            >
                              <span
                                class="c30"
                              >
                                Drag & Drop here or
                              </span>
                            </div>
                            <input
                              class="c31 c32"
                              multiple=""
                              name="files"
                              tabindex="-1"
                              type="file"
                              width="100%"
                            />
                            <div
                              class="c33"
                            >
                              <button
                                aria-disabled="false"
                                class="c34 c35"
                                type="button"
                              >
                                <span
                                  class="c36 c37"
                                >
                                  Browse files
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </label>
                  </div>
                  <div
                    class="c4 c38"
                  >
                    <div
                      class="c6"
                    >
                      <div
                        class="c39 c40"
                      >
                        <button
                          aria-disabled="false"
                          class="c34 c41"
                          type="button"
                        >
                          <span
                            class="c36 c37"
                          >
                            app.components.Button.cancel
                          </span>
                        </button>
                      </div>
                      <div
                        class="c39 c40"
                      />
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UploadAssetDialog from url snapshots the component 1`] = `
<body
  class="lock-body-scroll"
>
  .c0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

<div
    class="c0"
  >
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-log"
      role="log"
    />
    <p
      aria-live="polite"
      aria-relevant="all"
      id="live-region-status"
      role="status"
    />
    <p
      aria-live="assertive"
      aria-relevant="all"
      id="live-region-alert"
      role="alert"
    />
  </div>
  .c1 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0px 2px 15px rgba(33,33,52,0.1);
}

.c3 {
  background: #f6f6f9;
  padding-top: 16px;
  padding-right: 20px;
  padding-bottom: 16px;
  padding-left: 20px;
}

.c0 {
  position: fixed;
  z-index: 4;
  inset: 0;
  background: rgb(220,220,228,0.8);
  padding: 0 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  width: 51.875rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c8 svg {
  height: 12px;
  width: 12px;
}

.c8 svg > g,
.c8 svg path {
  fill: #ffffff;
}

.c8[aria-disabled='true'] {
  pointer-events: none;
}

.c8:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c8:focus-visible {
  outline: none;
}

.c8:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 2rem;
  width: 2rem;
}

.c9 svg > g,
.c9 svg path {
  fill: #8e8ea9;
}

.c9:hover svg > g,
.c9:hover svg path {
  fill: #666687;
}

.c9:active svg > g,
.c9:active svg path {
  fill: #a5a5ba;
}

.c9[aria-disabled='true'] {
  background-color: #eaeaef;
}

.c9[aria-disabled='true'] svg path {
  fill: #666687;
}

.c4 {
  border-radius: 4px 4px 0 0;
  border-bottom: 1px solid #eaeaef;
}

.c29 {
  border-radius: 0 0 4px 4px;
  border-top: 1px solid #eaeaef;
}

.c31 > * + * {
  margin-left: 8px;
}

.c6 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #32324d;
}

.c7 {
  font-weight: 600;
  line-height: 1.14;
}

.c19 {
  background: #eaeaef;
}

.c20 {
  height: 1px;
  border: none;
  margin: 0;
}

.c10 {
  padding-top: 24px;
  padding-right: 40px;
  padding-left: 40px;
}

.c21 {
  padding-top: 24px;
  padding-right: 40px;
  padding-bottom: 24px;
  padding-left: 40px;
}

.c18 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #4945ff;
}

.c14 {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #666687;
}

.c15 {
  font-weight: 600;
  line-height: 1.14;
}

.c16 {
  font-weight: 600;
  font-size: 0.6875rem;
  line-height: 1.45;
  text-transform: uppercase;
}

.c12 {
  padding: 16px;
}

.c17 {
  border-bottom: 2px solid #4945ff;
}

.c13 {
  border-bottom: 2px solid transparent;
}

.c11[aria-disabled='true'] {
  cursor: not-allowed;
}

.c25 {
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1.33;
  color: #32324d;
}

.c28 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.33;
  color: #666687;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c26 {
  border: 1px solid #dcdce4;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 12px;
  padding-bottom: 12px;
  background: #ffffff;
  outline: none;
  box-shadow: 0;
  -webkit-transition-property: border-color,box-shadow,fill;
  transition-property: border-color,box-shadow,fill;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
}

.c26:focus-within {
  border: 1px solid #4945ff;
  box-shadow: #4945ff 0px 0px 0px 2px;
}

.c27 {
  display: block;
  width: 100%;
  font-weight: 400;
  font-size: 0.875rem;
  border: none;
  color: #32324d;
  resize: none;
}

.c27::-webkit-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c27::-moz-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c27:-ms-input-placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c27::placeholder {
  color: #8e8ea9;
  opacity: 1;
}

.c27:focus-within {
  outline: none;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c23 > * {
  margin-top: 0;
  margin-bottom: 0;
}

.c23 > * + * {
  margin-top: 4px;
}

.c22 textarea {
  height: 5rem;
  line-height: 1.25rem;
}

.c22 textarea::-webkit-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c22 textarea::-moz-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c22 textarea:-ms-input-placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c22 textarea::placeholder {
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  color: #8e8ea9;
  opacity: 1;
}

.c35 {
  font-weight: 500;
  font-size: 0.75rem;
  line-height: 1.33;
  color: #32324d;
}

.c32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding: 8px;
  border-radius: 4px;
  background: #ffffff;
  border: 1px solid #dcdce4;
  position: relative;
  outline: none;
}

.c32 svg {
  height: 12px;
  width: 12px;
}

.c32 svg > g,
.c32 svg path {
  fill: #ffffff;
}

.c32[aria-disabled='true'] {
  pointer-events: none;
}

.c32:after {
  -webkit-transition-property: all;
  transition-property: all;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -4px;
  bottom: -4px;
  left: -4px;
  right: -4px;
  border: 2px solid transparent;
}

.c32:focus-visible {
  outline: none;
}

.c32:focus-visible:after {
  border-radius: 8px;
  content: '';
  position: absolute;
  top: -5px;
  bottom: -5px;
  left: -5px;
  right: -5px;
  border: 2px solid #4945ff;
}

.c36 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c36 .sc-jnHPDa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 .c34 {
  color: #ffffff;
}

.c36[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c36[aria-disabled='true'] .c34 {
  color: #666687;
}

.c36[aria-disabled='true'] svg > g,
.c36[aria-disabled='true'] svg path {
  fill: #666687;
}

.c36[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c36[aria-disabled='true']:active .c34 {
  color: #666687;
}

.c36[aria-disabled='true']:active svg > g,
.c36[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c36:hover {
  border: 1px solid #7b79ff;
  background: #7b79ff;
}

.c36:active {
  border: 1px solid #4945ff;
  background: #4945ff;
}

.c33 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px 16px;
  background: #4945ff;
  border: none;
  border: 1px solid #dcdce4;
  background: #ffffff;
}

.c33 .sc-jnHPDa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c33 .c34 {
  color: #ffffff;
}

.c33[aria-disabled='true'] {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true'] .c34 {
  color: #666687;
}

.c33[aria-disabled='true'] svg > g,
.c33[aria-disabled='true'] svg path {
  fill: #666687;
}

.c33[aria-disabled='true']:active {
  border: 1px solid #dcdce4;
  background: #eaeaef;
}

.c33[aria-disabled='true']:active .c34 {
  color: #666687;
}

.c33[aria-disabled='true']:active svg > g,
.c33[aria-disabled='true']:active svg path {
  fill: #666687;
}

.c33:hover {
  background-color: #f6f6f9;
}

.c33:active {
  background-color: #eaeaef;
}

.c33 .c34 {
  color: #32324d;
}

.c33 svg > g,
.c33 svg path {
  fill: #32324d;
}

<div
    data-react-portal="true"
  >
    <div
      class="c0"
    >
      <div>
        <div
          aria-labelledby="title"
          aria-modal="true"
          class="c1 c2"
          role="dialog"
        >
          <div
            class="c3 c4"
          >
            <div
              class="c5"
            >
              <h2
                class="c6 c7"
                id="title"
              >
                Upload assets
              </h2>
              <button
                aria-disabled="false"
                aria-label="Close the modal"
                class="c8 c9"
                type="button"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 2.417L21.583 0 12 9.583 2.417 0 0 2.417 9.583 12 0 21.583 2.417 24 12 14.417 21.583 24 24 21.583 14.417 12 24 2.417z"
                    fill="#212134"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div>
            <div
              class="c10"
            >
              <div
                aria-label="How do you want to upload your assets?"
                role="tablist"
              >
                <button
                  aria-disabled="false"
                  aria-selected="false"
                  class="c11"
                  id="tabgroup-8-0-tab"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="c12 c13"
                  >
                    <span
                      class="c14 c15 c16"
                    >
                      From computer
                    </span>
                  </div>
                </button>
                <button
                  aria-controls="tabgroup-8-1-tabpanel"
                  aria-disabled="false"
                  aria-selected="true"
                  class="c11"
                  id="tabgroup-8-1-tab"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="c12 c17"
                  >
                    <span
                      class="c18 c15 c16"
                    >
                      From url
                    </span>
                  </div>
                </button>
              </div>
              <hr
                class="c19 c20"
              />
            </div>
            <div>
              <div
                aria-labelledby="tabgroup-8-1-tab"
                id="tabgroup-8-1-tabpanel"
                role="tabpanel"
                tabindex="0"
              >
                <form
                  action="#"
                  novalidate=""
                >
                  <div
                    class="c21"
                  >
                    <div
                      class="c22"
                    >
                      <div>
                        <div
                          class="c23"
                        >
                          <div
                            class="c24"
                          >
                            <label
                              class="c25"
                              for="textarea-1"
                            >
                              URL
                            </label>
                          </div>
                          <div
                            class="c26"
                          >
                            <textarea
                              aria-describedby="textarea-1-hint"
                              aria-invalid="false"
                              class="c27"
                              id="textarea-1"
                              name="urls"
                            />
                          </div>
                          <p
                            class="c28"
                            id="textarea-1-hint"
                          >
                            Separate your URL links by a carriage return.
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="c3 c29"
                  >
                    <div
                      class="c5"
                    >
                      <div
                        class="c30 c31"
                      >
                        <button
                          aria-disabled="false"
                          class="c32 c33"
                          type="button"
                        >
                          <span
                            class="c34 c35"
                          >
                            app.components.Button.cancel
                          </span>
                        </button>
                      </div>
                      <div
                        class="c30 c31"
                      >
                        <button
                          aria-disabled="false"
                          class="c32 c36"
                          type="submit"
                        >
                          <span
                            class="c34 c35"
                          >
                            Next
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
